...
              keyboardShouldPersistTaps="handled"
              keyboardDismissMode={Platform.OS === 'ios' ? 'interactive' : 'on-drag'}
            >
              <View style={[styles.pageContainer, styles.importPageContainer]}>
                <View style={styles.importTextContainer}>
                  <ThemedText type="title" style={styles.title}>
                    Import Seed Phrase
                  </ThemedText>
                  <ThemedText style={styles.subtitle}>Enter your 12-word seed phrase</ThemedText>
                </View>

                <View style={styles.inputContainer}>
                  <TextInput
...
            >
              <TouchableOpacity
                style={[styles.button, styles.finishButton, { backgroundColor: buttonPrimary }]}
                onPress={handleImportComplete}
              >
                <ThemedText style={[styles.buttonText, { color: buttonPrimaryText }]}>
                  Import
                </ThemedText>
              </TouchableOpacity>
            </View>
          </View>
        </KeyboardAvoidingView>
      </ThemedView>
...
