...
        [
          {
            text: 'Cancel',
            style: 'cancel',
          },
          {
            text: 'Continue',
            onPress: () => action(),
          },
        ]
      );
      return;
    }
...
