import { Tabs } from 'expo-router';
import {
  Bug,
  Home,
  List,
  Receipt,
  Settings,
  UserSquare2,
  Wallet,
} from 'lucide-react-native';
import React, { useMemo } from 'react';
import { Platform, View } from 'react-native';
import { useSafeAreaInsets } from 'react-native-safe-area-context';
...
