...
                            onPress={e => {
                              e.stopPropagation(); // Prevent parent row navigation
                              setShowRelayDetails(!showRelayDetails);
                            }}
                          >
                            <ThemedText style={[styles.moreInfoText, { color: textPrimaryColor }]}>
                              {showRelayDetails ? 'Less info' : 'More info'}
                            </ThemedText>
                            <ThemedText
                              style={[
                                styles.moreInfoArrow,
                                {
                                  color: textPrimaryColor,
...
