...
              <ThemedText style={[styles.updatingText, { color: secondaryTextColor }]}>
                Updating relays...
              </ThemedText>
            )}

            {/* Add Relays Input */}
            <ThemedText style={styles.titleText}>Popular relays:</ThemedText>
            <View style={[styles.filterContainer, { borderBottomColor: inputBorderColor }]}>
              <TextInput
                style={[styles.filterInput, { color: primaryTextColor }]}
                value={filterText}
                onChangeText={setFilterText}
                placeholder="Filter relays..."
...
